...
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/borders"
        app:layout_constraintStart_toStartOf="@id/borders"
        app:layout_constraintTop_toTopOf="@id/borders" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar_collection"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/borders"
        app:layout_constraintStart_toStartOf="@id/borders"
        app:layout_constraintTop_toTopOf="@id/borders"
...
