<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:id="@+id/map_container"
    tools:context=".fragments.MapsFragment">

    <TextView
        android:id="@+id/text_enter_map_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/please_enter_map_size"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_maps"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="@android:color/darker_gray"
        app:boxStrokeColor="@android:color/darker_gray"
        app:hintTextColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_enter_map_size">

        <EditText
            android:id="@+id/type_map_size"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:hint="@string/map_size"
            android:digits="0123456789"
            android:inputType="number"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/calculate_maps"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:text="@string/calculate"
        android:layout_marginBottom="50dp"
        android:stateListAnimator="@null"
        android:background="@drawable/btn_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/inner_maps_fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>